# cc-snowml-viewer

./: .env.example  .gitignore  FEATURE_SERVICE_COMPUTE_POOL_CONNECTION.md  FEATURE_VISUALIZATION_IMPROVEMENTS.md  README.md  docker-compose.yml  pyproject.toml  snowflake.yml
.claude/: SESSION_NOTES.md
backend/: app.py
backend/models/: __init__.py  schemas.py
backend/routers/: graph.py
backend/services/: snowflake_service.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Legend.tsx  NetworkGraph.tsx  Sidebar.tsx
frontend/src/components/nodes/: ComputePoolNode.tsx  EaiNode.tsx  NotebookNode.tsx  ServiceNode.tsx
frontend/src/hooks/: useGraphData.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
sql/queries/: compute_pools.sql  external_integrations.sql  notebooks.sql  services.sql
